working on setting up basic design

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -10,7 +10,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<title>Brunch with Banana Pancakes</title>
+		<title>Marv's Den Development</title>
 		
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		
@@ -32,6 +32,10 @@
 		
 	</head>
 	<body>
-		
+		<header id="global-header"></header>
+		<div class="row-fluid">
+			<div class="span2" id="leftNav"></div>
+			<div class="span10" id="mainContent"></div>
+		</div>	
 	</body>
 </html>
